REGRESSION(294049@main): paused and seeked animation finishes when resumed after a rate-adjusted animation https://bugs.webkit.org/show_bug.cgi?id=322936 rdar://186339093

Reviewed by Anne van Kesteren.

Ensure we reset the pending start time when calling `WebAnimation::play()` since a previous call
to `WebAnimation::pause()` would have recorded one that would be stale and yield an incorrect
updated start time when the pending play task is run.

* LayoutTests/imported/w3c/web-platform-tests/web-animations/timing-model/animations/playing-an-animation-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/timing-model/animations/playing-an-animation.html:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::play):

Canonical link: https://commits.webkit.org/320238@main